--- a/config-twrp.json
+++ b/config-twrp.json
@@ -8,9 +8,5 @@
   "dt_branch": "android-9.0",
   "dt_remote": "github",
   "dt_path": "device/xiaomi/tiffany",
-  "device_code": "tiffany",
-  "fix_product": false,
-  "fix_misscom": false,
-  "fix_busybox": false,
-  "fix_branch": "android-9.0"
+  "device_code": "tiffany"
 }
