--- a/.github/workflows/actions_twrp.yml
+++ b/.github/workflows/actions_twrp.yml
@@ -40,24 +40,12 @@ jobs:
     
     steps:
     - name: Checkout
-      uses: actions/checkout@main
-      
-    - name: Clean Up
+      uses: actions/checkout@v3
+              
+    - name: Initial
       run: |
-        docker rmi `docker images -q`
-        sudo rm -rf /usr/share/dotnet /etc/mysql /etc/php /etc/sudo apt/sources.list.d
-        sudo apt -y purge azure-cli ghc* zulu* hhvm llvm* firefox google* dotnet* powershell openjdk* mysql* php*
-        sudo apt update
-        sudo apt -y autoremove --purge
-        sudo apt clean
-        
-    - name: Update packages
-      run: |
-        sudo apt update
-        sudo apt full-upgrade
-        
-    - name: Install required packages
-      run: sudo apt install git-core gnupg flex bison gperf build-essential zip curl zlib1g-dev gcc-multilib g++-multilib libc6-dev-i386 lib32ncurses5-dev x11proto-core-dev libx11-dev tree lib32z-dev libgl1-mesa-dev libxml2-utils xsltproc unzip jq python2
+        sudo apt-get update -y
+        sudo apt-get install -y git-core gnupg flex bison gperf build-essential zip curl zlib1g-dev gcc-multilib g++-multilib libc6-dev-i386 lib32ncurses5-dev x11proto-core-dev libx11-dev tree lib32z-dev libgl1-mesa-dev libxml2-utils xsltproc unzip jq python2
       
     - name: Get variables
       run: |
