--- a/.github/workflows/actions_twrp.yml
+++ b/.github/workflows/actions_twrp.yml
@@ -5,6 +5,10 @@ on:
     types: [started]
   workflow_dispatch:
    inputs:
+     twrp_url:
+       description: 'twrp_url'
+       required: true
+       default: 'https://github.com/minimal-manifest-twrp/platform_manifest_twrp_omni'
      twrp_branch:
        description: 'twrp_branch'
        required: true
@@ -13,10 +17,6 @@ on:
        description: 'device_code'
        required: true
        default: 'tiffany'
-     dt_remote:
-       description: 'dt_remote(github or gitlab)'
-       required: true
-       default: 'github'
      dt_url:
        description: 'dt_url'
        required: true
@@ -29,6 +29,18 @@ on:
        description: 'dt_path'
        required: true
        default: 'device/xiaomi/tiffany'
+     lunch:
+       description: 'lunch(omni,twrp)'
+       required: true
+       default: 'omni'
+     mka:
+       description: 'mka(recoveryimage,bootimage)'
+       required: true
+       default: 'recoveryimage'
+     twrp_remote:
+       description: 'twrp_remote'
+       required: true
+       default: 'false'
 
 jobs:
   build:
@@ -46,37 +58,37 @@ jobs:
       
     - name: Get variables
       run: |
+        if [[ -z "${{ github.event.inputs.twrp_url }}" ]]; then
+            echo "::set-output name=twrp_url::$(jq -r '.twrp_url' config-twrp.json)"
+        else
+            echo "::set-output name=twrp_url::${{ github.event.inputs.twrp_url }}"
+        fi
         if [[ -z "${{ github.event.inputs.twrp_branch }}" ]]; then
-            echo "::set-output name=twrp_branch::$(jq -r '.twrp_branch' config.json)"
+            echo "::set-output name=twrp_branch::$(jq -r '.twrp_branch' config-twrp.json)"
         else
             echo "::set-output name=twrp_branch::${{ github.event.inputs.twrp_branch }}"
         fi
+        if [[ -z "${{ github.event.inputs.device_code }}" ]]; then
+            echo "::set-output name=device_code::$(jq -r '.device_code' config-twrp.json)"
+        else
+            echo "::set-output name=device_code::${{ github.event.inputs.device_code }}"
+        fi
         if [[ -z "${{ github.event.inputs.dt_url }}" ]]; then
-            echo "::set-output name=dt_url::$(jq -r '.dt_url' config.json)"
+            echo "::set-output name=dt_url::$(jq -r '.dt_url' config-twrp.json)"
         else
             echo "::set-output name=dt_url::${{ github.event.inputs.dt_url }}"
         fi
-        if [[ -z "${{ github.event.inputs.dt_remote }}" ]]; then
-            echo "::set-output name=dt_remote::$(jq -r '.dt_remote' config.json)"
-        else
-            echo "::set-output name=dt_remote::${{ github.event.inputs.dt_remote }}"
-        fi
         if [[ -z "${{ github.event.inputs.dt_branch }}" ]]; then
-            echo "::set-output name=dt_branch::$(jq -r '.dt_branch' config.json)"
+            echo "::set-output name=dt_branch::$(jq -r '.dt_branch' config-twrp.json)"
         else
             echo "::set-output name=dt_branch::${{ github.event.inputs.dt_branch }}"
         fi
         if [[ -z "${{ github.event.inputs.dt_path }}" ]]; then
-            echo "::set-output name=dt_path::$(jq -r '.dt_path' config.json)"
+            echo "::set-output name=dt_path::$(jq -r '.dt_path' config-twrp.json)"
         else
             echo "::set-output name=dt_path::${{ github.event.inputs.dt_path }}"
         fi
-        if [[ -z "${{ github.event.inputs.device_code }}" ]]; then
-            echo "::set-output name=device_code::$(jq -r '.device_code' config.json)"
-        else
-            echo "::set-output name=device_code::${{ github.event.inputs.device_code }}"
-        fi
-        echo "::set-output name=twrp_url::$(jq -r '.twrp_url' config-twrp.json)"
+        echo "::set-output name=dt_remote::$(jq -r '.dt_remote' config-twrp.json)"
         echo "::set-output name=git_username::$(jq -r '.git_username' config-twrp.json)"
         echo "::set-output name=git_email::$(jq -r '.git_email' config-twrp.json)"
         echo "::set-output name=use_own_dt::$(jq -r '.use_own_dt' config-twrp.json)"
@@ -89,10 +101,7 @@ jobs:
         mkdir ~/bin
         curl https://storage.googleapis.com/git-repo-downloads/repo > ~/bin/repo
         chmod a+x ~/bin/repo
-        
-    - name: Initialize Repair Manifest
-      run: git clone https://github.com/TeamWin/buildtree_manifests.git repair/
-      
+
     - name: Initialize a Repo client
       run: |
         ls /usr/bin/python*
@@ -124,6 +133,15 @@ jobs:
         repo sync -c -j$(nproc --all) --force-sync --no-clone-bundle --no-tags
         ls -al
 
+    - name: Clone Twrp recovery
+      if: github.event.inputs.twrp_remote == 'true'
+      run: |
+        PATH=~/bin:$PATH
+        cd workspace
+        rm -rf bootable/recovery
+        git clone --depth=1 -b ${{ steps.var.outputs.dt_branch }} https://github.com/TeamWin/android_bootable_recovery.git bootable/recovery
+        ls -al bootable/recovery
+
     - id: build
       name: Start Building
       run: |
@@ -132,12 +150,16 @@ jobs:
         tree device
         export ALLOW_MISSING_DEPENDENCIES=true
         source build/envsetup.sh
-        lunch omni_${{ steps.var.outputs.device_code }}-eng 
-        mka recoveryimage -j$(nproc --all)
+        lunch ${{ github.event.inputs.lunch }}_${{ steps.var.outputs.device_code }}-eng 
+        mka ${{ github.event.inputs.mka }} -j$(nproc --all)
         ls -al
         TWRP_VERSION=$(cat bootable/recovery/variables.h | grep TW_MAIN_VERSION_STR | cut -d\" -s -f2)
         echo "TWRP_VERSION: $TWRP_VERSION"
-        mv out/target/product/${{ steps.var.outputs.device_code }}/recovery.img out/target/product/${{ steps.var.outputs.device_code }}/TWRP-${TWRP_VERSION}_${{ steps.var.outputs.device_code }}-${{ steps.var.outputs.day }}.img
+        if [[ "${{ github.event.inputs.mka }}" == "recoveryimage" ]]; then
+            mv out/target/product/${{ steps.var.outputs.device_code }}/recovery.img out/target/product/${{ steps.var.outputs.device_code }}/TWRP-${TWRP_VERSION}_${{ steps.var.outputs.device_code }}-${{ steps.var.outputs.day }}.img
+        elif [[ "${{ github.event.inputs.mka }}" == "bootimage" ]]; then
+            mv out/target/product/${{ steps.var.outputs.device_code }}/boot.img out/target/product/${{ steps.var.outputs.device_code }}/TWRP-${TWRP_VERSION}_${{ steps.var.outputs.device_code }}-${{ steps.var.outputs.day }}.img
+        fi
         echo "::set-output name=TWRP_VERSION::${TWRP_VERSION}"
         
     - name: Upload REC
